--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ol>   
         <li><a href="example/helloworld.html">Hello World 实例</a></li>
         <li><a href="example/v-if.html">v-if & v-else & v-show</a></li>   
+        <li><a href="example/v-model.html">v-model</a></li>   
     </ol>
 </body>
 </html>
