--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <h1>Vue2.0实例</h1>
     <hr>
     <ol>   
-        <li><a href="example/helloworld.html">Hello World 实例</a></li>
+        <li><a href="example/helloworld.html">Hello World</a></li>
         <li><a href="example/v-if.html">v-if & v-else & v-show</a></li>   
+        <li><a href="example/v-for.html">v-for</a></li>   
+        <li><a href="example/v-text.html">v-text & v-html</a></li>   
+        <li><a href="example/v-on.html">v-on</a></li>   
         <li><a href="example/v-model.html">v-model</a></li>   
+        <li><a href="example/v-bind.html">v-bind</a></li>   
+        <li><a href="example/others.html">v-pre & v-cloak & v-once</a></li>   
     </ol>
 </body>
 </html>
